syntax = "proto3";

package matchmakingProto;

// The go_package option specifies the import path for the generated Go code.
option go_package = "./matchmakingProto";

message Players {
    string  playerRiotName = 1;
    string  playerRiotTagLine = 2;
    int32   playerRank = 3;
    string  playerRole = 4;
    string  playerPuuid = 5;
    string  partyId = 6;
    int32   queueType = 7;
}

message MatchResponse {
    string matchID = 1;
    repeated string participantsPUUID = 2;
}